--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "start": "node ./build/main.js",
     "dev": "tsc && node ./build/main.js"
   },
   "keywords": [],
