--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./main.js",
-    "dev": "tsc && node ./main.js"
+    "start": "node ./build/main.js",
+    "dev": "tsc && node ./build/main.js"
   },
   "keywords": [],
   "author": "",
