--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/adm-zip": "^0.5.0",
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "adm-zip": "^0.5.9",
     "eslint": "^8.22.0",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "discord.js": "^14.3.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
   }
 }
